# MyJobDB

./: LICENSE  README.md
queries/: 001_usuario.sql  002_servico.sql  003_telefones.sql  004_prestador_de_servico.sql  005_contratante.sql  006_solicitacao.sql
scripts/: create_tables.py
tables/: 001_usuario  001_usuario.sql  002_servico.sql  002_user.sql  003_telefones.sql  004_prestador_de_servico.sql  005_contratante  005_contratante.sql  006_solicitacao.sql  007_servico.sql
web/: .editorconfig  .gitignore  main.py  pyproject.toml  requirements.txt
web/app/: .env  main.py  settings.py
web/app/controllers/: index.py  service.py  service_contractor.py  service_provider.py  service_request.py  user.py
web/app/db/: connection.py  helpers.py  seeds.py
web/app/db/models/: service.py  service_contractor.py  service_provider.py  service_request.py  user.py
web/app/db/tables/: create.py  index.py  service.py  service_contractor.py  service_provider.py  service_request.py  user.py
web/app/public/css/: globals.css  user.css
web/app/public/js/: home.js
web/app/routes/: index.py  service.py  service_contractor.py  service_provider.py  service_request.py  user.py
web/app/templates/: create_service.html  create_service_contractor.html  create_service_provider.html  create_service_request.html  create_user.html  edit_service.html  edit_service_provider.html  edit_service_request.html  edit_user.html  index.html  service.html  service_contractor.html  service_provider.html  service_request.html  user.html
web/app/templates/components/: header.html
